# bullsim

./: .gitignore  Makefile.am  README  bootstrap.sh  configure.ac
src/: Makefile.am  basic_bull.hpp  bull.cpp  bull.hpp  bull_io.cpp  bull_io.hpp  bull_kernel.cpp  bull_kernel.hpp  bull_listener.hpp  bull_mcmc.cpp  bull_mcmc.h  bull_parsers.cpp  bull_parsers.hpp  char_encoding.cpp  char_encoding.hpp  complex.cpp  complex.hpp  encoded_chars.hpp  genetic_codes.cpp  genetic_codes.hpp  jph.hpp  like_attribute_sets.cpp  like_attribute_sets.hpp  like_attributes.cpp  like_attributes.hpp  lin_alg.cpp  lin_alg.hpp  main.cpp  matrices.cpp  matrices.hpp  model.cpp  model.hpp  mth_exception.hpp  node.cpp  node.hpp  parameter.cpp  parameter.hpp  part_mod_index.hpp  seq_likelihood.c  seq_likelihood.h  (+13 more)
src/oldsrc/: AdvancedBullDefs.h  BackupCopy of SSRFCodon.cpp  CondenseMatrices.h  F81.cpp  F81.h  GTR.cpp  GTR.h  HKY.cpp  HKY.h  JC.cpp  JC.h  K2P.cpp  K2P.h  MTHException.h  MTHExcpetion.h  SSRFCodon.cpp  SSRFCodon.h  SSRFCodonSubMod.cpp  SSRFCodonSubMod.h  allelesblock.cpp  allelesblock.h  assumptionsblock.cpp  assumptionsblock.h  basicbulldefs.h  basicfuncs.cpp  basicfuncs.h  basicmeowdefs.h  bull.cpp  bull.h  bullhandles.cpp  charactersblock.cpp  charactersblock.h  charencoding.cpp  charencoding.h  charstates.h  codonhack.h  complex.cpp  complex.h  datablock.cpp  datablock.h  (+64 more)
test/: BigLongTree.nex  Makefile.am  cytb-sim.nex
xcode/bullxcode/: bullxcode.1
xcode/bullxcode/bullxcode.xcodeproj/: project.pbxproj  tracyh.mode1  tracyh.pbxuser
